bk_ida/gobmkida/g1/do_find_superstring
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_find_superstring/src/engine/utils.c:2098:7: error: use of undeclared identifier 'dword_760CDC'
v15 = dword_760CDC[i]; 
      ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/do_find_superstring/src/obj/1/utils.o] Error 1
